force-app/main/default/objects/ProdCategoryToRWAFeatureMap__mdt/ProdCategoryToRWAFeatureMap__mdt.object-meta.xml
<CustomObject>
    <label>ESP_ProdCategoryToRWAFeatureMap</label>
    <pluralLabel>ESP_ProdCategoryToRWAFeatureMap</pluralLabel>
</CustomObject>