force-app/main/default/objects/ProdCategoryToRWAFeatureMap__mdt/fields/Licensing_Portal_Access__c.field-meta.xml
<CustomField>
    <fullName>Licensing_Portal_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Licensing Portal Access</label>
    <type>Checkbox</type>
</CustomField>