force-app/main/default/objects/ProdCategoryToRWAFeatureMap__mdt/fields/RWA_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>RWA_Product_Family__c</fullName>
    <defaultValue>&apos;S&apos;</defaultValue>
    <label>RWA Product Family</label>
    <length>5</length>
    <type>Text</type>
</CustomField>