force-app/main/default/objects/ProdCategoryToRWAFeatureMap__mdt/fields/Show_NGC_Container_Registry__c.field-meta.xml
<CustomField>
    <fullName>Show_NGC_Container_Registry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show NGC Container Registry</label>
    <type>Checkbox</type>
</CustomField>