force-app/main/default/objects/ProdCategoryToRWAFeatureMap__mdt/fields/Support_Portal_Access__c.field-meta.xml
<CustomField>
    <fullName>Support_Portal_Access__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Support Portal Access</label>
    <type>Checkbox</type>
</CustomField>