force-app/main/default/objects/ProdCategoryToRWAFeatureMap__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>Product_Line__c</columns>
    <columns>Support_Portal_Access__c</columns>
    <columns>Show_NGC_Container_Registry__c</columns>
    <columns>Licensing_Portal_Access__c</columns>
    <columns>RWA_Product_Family__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
    <language>en_US</language>
</ListView>